Consolidate page creation endpoints; enable creation of new templates
